Closed
Bug 1244642
Opened 10 years ago
Closed 10 years ago
implement AnimationEffectTiming direction
Categories
(Core :: DOM: Animation, defect)
Core
DOM: Animation
Tracking
()
RESOLVED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| firefox48 | --- | fixed |
People
(Reporter: motozawa, Assigned: r_kato)
References
()
Details
Attachments
(3 files)
No description provided.
Updated•10 years ago
|
Assignee: motozawa → daisuke
Updated•10 years ago
|
Assignee: daisuke → foobar094
| Assignee | ||
Comment 1•10 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/42591/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/42591/
Attachment #8735077 -
Flags: review?(hiikezoe)
Attachment #8735078 -
Flags: review?(hiikezoe)
| Assignee | ||
Comment 2•10 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/42593/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/42593/
Comment 3•10 years ago
|
||
Comment on attachment 8735077 [details]
MozReview Request: Bug 1244642 - Implement AnimationEffectTiming.direction r?hiro
https://reviewboard.mozilla.org/r/42591/#review39077
Attachment #8735077 -
Flags: review?(hiikezoe) → review+
Updated•10 years ago
|
Attachment #8735078 -
Flags: review?(hiikezoe) → review+
Comment 4•10 years ago
|
||
Comment on attachment 8735078 [details]
MozReview Request: Bug 1244642 - Web-platform tests for AnimationEffectTiming.direction r?hiro
https://reviewboard.mozilla.org/r/42593/#review39081
This is really great!
I think getComputedStyle test should be in getComputedStyle.html.
And I'd like to see a test case that fill:backwards.
r=me with that.
| Assignee | ||
Comment 5•10 years ago
|
||
Comment on attachment 8735078 [details]
MozReview Request: Bug 1244642 - Web-platform tests for AnimationEffectTiming.direction r?hiro
Review request updated; see interdiff: https://reviewboard.mozilla.org/r/42593/diff/1-2/
| Assignee | ||
Comment 6•10 years ago
|
||
https://reviewboard.mozilla.org/r/42593/#review39081
I've submitted the new test files. These files:
* move tests about getComputedStyle to getComputedStyle.html
* add a test to make sure a value flips when a direction changed.
Thank you for reviewing! ;)
Comment 7•10 years ago
|
||
Ryo, these patches cause crashes on MacOS10.10 opt builds on try. Could you please run the crashing tests on your machine locally?
https://treeherder.mozilla.org/#/jobs?repo=try&revision=86bc8a1546f1
https://treeherder.mozilla.org/#/jobs?repo=try&revision=9a6639d81f87
See M-e10s(5).
Thanks.
Flags: needinfo?(motoryo1)
Comment 8•10 years ago
|
||
I ran the crashing tests with e10s option in local machine (OSX 10.11.4) with this patch. The process was crashed. Attachment file is the log at this time.
Flags: needinfo?(motoryo1)
Comment 9•10 years ago
|
||
The e10s crashing test was crashed when I don't apply this patch.
Comment 10•10 years ago
|
||
Ryo, thanks!
The crash was a known issue. https://hg.mozilla.org/integration/mozilla-inbound/rev/d5f3da0cfe7c
Sorry for confusion.
Comment 11•10 years ago
|
||
Comment 12•10 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/b51b8d9f8337
https://hg.mozilla.org/mozilla-central/rev/e8e94146b659
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in
before you can comment on or make changes to this bug.
Description
•