Bug 1244642 - Implement AnimationEffectTiming.direction r=hiro

MozReview-Commit-ID: I8t011JVGBb

--HG--
extra : rebase_source : 15baf67ea204d55e047405c7cd9c20cfdaa12bce